06/14/2004 Bob Rossi <bob@brasko.net>

    * cgdb.c (parse_long_options): add NULL entry to long_options to fix crash 
	in getopt_long

version 0.4.2 (05/10/2004):
version 0.4.1 (04/26/2004):

03/31/2004 Bob Rossi <bob@brasko.net>

    * cgdb.c (gdb_input): Free buf, fixing a memory leak.
	(child_input): Ditto

03/22/2004 Bob Rossi <bob@brasko.net>

    * Doxyfile: Change TAGFILES line to use correct path to html.

03/22/2004 Bob Rossi <bob@brasko.net>

    * lib/Doxyfile: Moved to ./cgdb/Doxyfile
    * Doxyfile: New file moved from ./cgdb/lib/Doxyfile

03/06/2004 Bob Rossi <bob@brasko.net>

    * cgdb.c (version_info): change Copyright info. Changed date.

03/02/2004 Bob Rossi <bob@brasko.net>

    * lib/Doxyfile: Changing name of output file. 

02/27/2004 Bob Rossi <bob@brasko.net>

    * lib: Add directory

01/29/2004 Bob Rossi <bob@brasko.net>

   * cgdb.c: Changed PATH_MAX to FSUTIL_PATH_MAX and #include <limits.h> to
   #include "fs_util.h"
   * interface.c: ditto
   * highlight.c: Changed PATH_MAX to FSUTIL_PATH_MAX

01/08/2004 Bob Rossi <bob@brasko.net>
    
   * Makefile.in: regenerated with documented autotools version
   * src/Makefile.in: ditto

version 0.4.0-1 cygwin release

12/03/2003 Ronald Landheer-Cieslak <ronald@landheer.com>
   * Makefile.in: regenerated
   * src/Makefile.am: set linker flags (-L) relative to build directory
   set include path (-I) relative to source directory
   * src/Makefile.in: regenerated

version 0.4.0 (10/28/2003):

10/28/2003 Bob Rossi <bob@brasko.net>

   * tokenizer/src/Makefile.in: ran autoregen.sh

10/26/2003 Bob Rossi <bob@brasko.net>

   * command_lexer.l: add impossible function call to stop compiler warning.
   * command_lexer.c: generated from above file.
   * adalexer.l: add impossible function call to stop compiler warning.
   * adalexer.c: generated from above file.
   * clexer.l: add impossible function call to stop compiler warning.
   * clexer.c: generated from above file.
