@@ -1,2 +1,2 @@
-SUBDIRS = tokenizer src lib
+SUBDIRS = tokenizer lib src
 EXTRA_DIST = include
