@@ -5,7 +5,7 @@ AM_CFLAGS = -g -Wall \
 -I$(top_srcdir)/various/adt/include \
 -I$(top_srcdir)/various/util/include \
 -I$(top_srcdir)/various/rlctx/include \
--I$(top_srcdir)/various/input/include \
+-I$(top_srcdir)/cgdb/lib/kui/inc \
 -I$(top_srcdir)/cgdb/tokenizer/include \
 -I$(top_srcdir)/cgdb/include
 
@@ -14,14 +14,14 @@ bin_PROGRAMS = cgdb
 cgdb_LDFLAGS = \
 -L$(top_builddir)/various/util/src \
 -L$(top_builddir)/various/adt/src \
--L$(top_builddir)/various/input/src \
 -L$(top_builddir)/various/rlctx/src \
 -L$(top_builddir)/tgdb/tgdb-base/src \
 -L$(top_builddir)/tgdb/annotate-two/src \
+-L$(top_builddir)/cgdb/lib/kui/src \
 -L$(top_builddir)/cgdb/tokenizer/src \
 -L$(top_builddir)/tgdb/gdbmi/src
 
-cgdb_LDADD = -ltgdb -lannotate_two -lgdbmi -ltokenizer -lrlctx -linput -ladt -lutil
+cgdb_LDADD = -ltgdb -lannotate_two -lgdbmi -ltokenizer -lrlctx -lkui -ladt -lutil
 
 cgdb_SOURCES = \
 cgdb.c \
@@ -40,6 +40,7 @@ $(top_srcdir)/various/util/src \
 $(top_srcdir)/various/adt/src \
 $(top_srcdir)/various/input/src \
 $(top_srcdir)/various/rlctx/src \
+$(top_srcdir)/cgdb/lib/kui/src \
 $(top_srcdir)/cgdb/tokenizer/src \
 $(top_srcdir)/tgdb/annotate-two/src \
 $(top_srcdir)/tgdb/gdbmi/src \
