@@ -1,3 +1,11 @@
+06/29/2004 Bob Rossi <bob@brasko.net>
+
+	* inc/kui.h (kui_get_raw_data): add new function
+	(kui_set_blocking_ms): Ditto
+	(kui_manager_get_raw_data): Ditto
+	(kui_manager_set_terminal_escape_sequence_timeout): Ditto
+	* src/kui.c (struct kuictx): Add last_maps_raw_data field
+
 version 0.4.2 (05/10/2004):
 version 0.4.1 (04/26/2004):
 
